--- a/UFS-DC-Chef-CRM-App/Src/In-Call Sampling Screen.fx.yaml
+++ b/UFS-DC-Chef-CRM-App/Src/In-Call Sampling Screen.fx.yaml
@@ -116,6 +116,17 @@
         UpdateContext({_V_SelectedHeaderOptionInCall: _V_SelectedHeaderOptionInCall});
         UpdateContext({_V_CollapseExpand: false});
         UpdateContext({_V_Id: 0});
+        ClearCollect(
+            _Col_AllSKUs_duplicate_sampling,
+            _Col_AllSKUs
+        );
+        ForAll(
+            Col_NumberOfAddedSKUs,
+            RemoveIf(
+                _Col_AllSKUs_duplicate_sampling,
+                ThisRecord.Name = Name
+            )
+        )
 
     MainPreview_Container As groupContainer.verticalAutoLayoutContainer:
         Fill: =RGBA(255, 255, 255, 1)
@@ -2689,7 +2700,7 @@
                                                     PaddingRight: =0
                                                     PaddingTop: =0
                                                     Size: =10
-                                                    Text: ="Pack Size -     "&ThisItem.'Pack Size'
+                                                    Text: ="Pack Size -     "&LookUp(SKUS,Name=ThisItem.Name).'Packing Size'
                                                     Width: =Parent.Width
                                                     ZIndex: =2
 
@@ -4628,9 +4639,50 @@
                                                     PaddingLeft: =9
                                                     Size: =10
                                                     Text: ="Latest Dish"
+                                                    Visible: =false
                                                     Width: =Parent.Width
                                                     X: =5
                                                     ZIndex: =3
+
+                                                Container4 As groupContainer.horizontalAutoLayoutContainer:
+                                                    DropShadow: =DropShadow.Light
+                                                    LayoutMinHeight: =0
+                                                    LayoutMinWidth: =0
+                                                    LayoutMode: =LayoutMode.Auto
+                                                    RadiusBottomLeft: =4
+                                                    RadiusBottomRight: =4
+                                                    RadiusTopLeft: =4
+                                                    RadiusTopRight: =4
+                                                    ZIndex: =4
+
+                                                    Label8 As label:
+                                                        BorderColor: =RGBA(131, 24, 75, 1)
+                                                        Color: =RGBA(240, 98, 15, 1)
+                                                        DisabledColor: =RGBA(166, 166, 166, 1)
+                                                        LayoutMinWidth: =0
+                                                        Size: =13
+                                                        Text: ="*"
+                                                        VerticalAlign: =VerticalAlign.Top
+                                                        Visible: =If(Dropdown4_1.Selected.Value=Type_SKU.Dry,false,true)
+                                                        Width: =15
+                                                        ZIndex: =1
+
+                                                    FeedBackForDish_7 As label:
+                                                        BorderColor: =RGBA(131, 24, 75, 1)
+                                                        Color: =RGBA(0, 0, 0, 1)
+                                                        DisabledColor: =RGBA(166, 166, 166, 1)
+                                                        FillPortions: =1
+                                                        FontWeight: =FontWeight.Semibold
+                                                        Height: =30
+                                                        LayoutMinHeight: =20
+                                                        LayoutMinWidth: =0
+                                                        OnSelect: =
+                                                        PaddingLeft: =3
+                                                        Size: =10
+                                                        Text: ="Latest Dish"
+                                                        Width: =Parent.Width
+                                                        X: =5
+                                                        ZIndex: =2
 
                                                 Container44 As groupContainer.manualLayoutContainer:
                                                     AlignInContainer: =AlignInContainer.SetByContainer
@@ -4639,7 +4691,7 @@
                                                     LayoutMinHeight: =100
                                                     LayoutMinWidth: =Parent.Width
                                                     Width: =Parent.Width
-                                                    ZIndex: =4
+                                                    ZIndex: =5
 
                                                     Dropdown2 As dropdown:
                                                         AllowEmptySelection: =true
@@ -4655,6 +4707,7 @@
                                                         DisabledBorderColor: =RGBA(166, 166, 166, 1)
                                                         DisabledColor: =RGBA(166, 166, 166, 1)
                                                         DisabledFill: =RGBA(244, 244, 244, 1)
+                                                        DisplayMode: =If(Dropdown4_1.Selected.Value=Type_SKU.Dry,DisplayMode.Disabled,DisplayMode.Edit)
                                                         FocusedBorderThickness: =1
                                                         Height: =30
                                                         HoverColor: =RGBA(0, 0, 0, 1)
@@ -4741,7 +4794,7 @@
                                                     Text: ="Remarks"
                                                     Width: =Parent.Width
                                                     X: =5
-                                                    ZIndex: =5
+                                                    ZIndex: =6
 
                                                 Dropdown3_2 As dropdown:
                                                     AllowEmptySelection: =true
@@ -4789,7 +4842,7 @@
                                                     SelectionFill: =RGBA(139, 154, 159, 1)
                                                     Size: =10
                                                     Width: =Parent.Width - 10
-                                                    ZIndex: =6
+                                                    ZIndex: =7
 
                                             Gallery1_12 As gallery.variableTemplateHeightGallery:
                                                 AlignInContainer: =AlignInContainer.Start
@@ -4908,7 +4961,7 @@
                                                                 DisabledBorderColor: =RGBA(166, 166, 166, 1)
                                                                 DisabledColor: =RGBA(166, 166, 166, 1)
                                                                 DisabledFill: =RGBA(244, 244, 244, 1)
-                                                                DisplayFields: =["ulchef_name"]
+                                                                DisplayFields: =["statecode"]
                                                                 DisplayMode: |-
                                                                     =If(
                                                                         IsBlank(Dropdown2.Selected.Name) || IsBlank(Dropdown3_2.SelectedText) || IsBlank(Dropdown4_1.SelectedText),
@@ -4921,8 +4974,8 @@
                                                                 Height: =26
                                                                 HoverColor: =RGBA(0, 0, 0, 1)
                                                                 HoverFill: =RGBA(214, 221, 224, 1)
-                                                                Items: =SortByColumns(_Col_AllSKUs,"ulchef_name",SortOrder.Ascending)
-                                                                OnChange: |
+                                                                Items: =SortByColumns(_Col_AllSKUs_duplicate_sampling,"ulchef_name",SortOrder.Ascending)
+                                                                OnChange: |-
                                                                     =Patch(
                                                                         Col_NumberOfAddedSKUs,
                                                                         LookUp(
@@ -4939,10 +4992,21 @@
                                                                             )
                                                                         }
                                                                     );
+                                                                    ClearCollect(
+                                                                        _Col_AllSKUs_duplicate_sampling,
+                                                                        _Col_AllSKUs
+                                                                    );
+                                                                    ForAll(
+                                                                        Col_NumberOfAddedSKUs,
+                                                                        RemoveIf(
+                                                                            _Col_AllSKUs_duplicate_sampling,
+                                                                            ThisRecord.Name = Name
+                                                                        )
+                                                                    )
                                                                 PressedColor: =RGBA(255, 255, 255, 1)
                                                                 PressedFill: =RGBA(106, 122, 127, 1)
-                                                                SearchFields: =["ulchef_name"]
-                                                                SearchItems: =Search(SortByColumns(_Col_AllSKUs,"ulchef_name",SortOrder.Ascending),ComboBox7_1.SearchText,"ulchef_name")
+                                                                SearchFields: =["statecode"]
+                                                                SearchItems: =Search(SortByColumns(_Col_AllSKUs_duplicate_sampling,"ulchef_name",SortOrder.Ascending),ComboBox7_1.SearchText,"statecode")
                                                                 SelectionFill: =RGBA(214, 221, 224, 1)
                                                                 SelectMultiple: =false
                                                                 Size: =10
@@ -8390,4 +8454,14 @@
         X: =20
         Y: =50
         ZIndex: =4
+
+    Label10 As label:
+        BorderColor: =RGBA(131, 24, 75, 1)
+        Color: =RGBA(0, 0, 0, 1)
+        DisabledColor: =RGBA(166, 166, 166, 1)
+        Size: =13
+        Text: =CountRows(_Col_AllSKUs_duplicate_sampling)
+        X: =173
+        Y: =10
+        ZIndex: =5
 
